# decision-judgment-benchmark

./: .env.local.example  .gitignore  LICENSE  README.md  examples.md  pyproject.toml
data/: README.md
data/benchmarks/: README.md
data/benchmarks/descriptive/: judge_calibration.jsonl  judge_system_prompt.jsonl  judgments.jsonl  judgments_compressed.jsonl  questions.jsonl  responses.jsonl  rubric.md  system_prompt.jsonl
data/benchmarks/fidelity/: questions.jsonl  responses.jsonl  rubric.md  system_prompt.jsonl
data/benchmarks/normative/: judge_system_prompt.jsonl  questions.jsonl  responses.jsonl  rubric.md  system_prompt.jsonl
data/real_world_examples/: README.md  examples.jsonl
data/system_prompts/: README.md  judges.jsonl
docs/: benchmark_structure.md  overview.md
src/decision_judgment_benchmark/: __init__.py  __main__.py  core.py  io.py  judge.py  models.py  utils.py
tests/: test_core.py  test_io.py  test_models.py
